[gd_scene load_steps=3 format=3 uid="uid://bo6kg7b4d4ihb"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_msnfi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eg5l6"]
bg_color = Color(0.0705882, 0.0823529, 0.0980392, 0.501961)

[node name="PauseMenu" type="CanvasLayer"]
visible = false
script = ExtResource("1_msnfi")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_eg5l6")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "RESTART"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "QUIT"

[connection signal="button_down" from="PanelContainer/VBoxContainer/HBoxContainer/ResumeButton" to="." method="_on_resume_button_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/HBoxContainer2/RestartButton" to="." method="_on_restart_button_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/HBoxContainer3/QuitButton" to="." method="_on_quit_button_button_down"]
